safe cancel similar to Future.cancel